# flavor_finder_backend

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
accounts/: urls.py  views.py
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_comment.py  0002_remove_place_rating.py  0003_place_rating.py  0004_alter_place_map_link_alter_place_num_reviews.py  0005_alter_place_map_link.py
flavor_finder/: asgi.py  settings.py  urls.py  wsgi.py
