[tool.poetry]
name = "flavor_finder_backend"
version = "0.1.0"
description = ""
authors = ["aytmamatov_musa <musaaytmamatov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.7.2"
Django = "4.2.3"
django-cors-headers = "4.2.0"
djangorestframework = "3.14.0"
psycopg = "3.1.9"
psycopg2-binary = "2.9.6"
pytz = "2023.3"
sqlparse = "0.4.4"
typing-extensions = "4.7.1"
python-dotenv = "<1.0.0"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
gunicorn = "^21.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
